tests/baselines/reference/collisionSuperAndLocalFunctionInProperty.errors.txt
tests/cases/compiler/collisionSuperAndLocalFunctionInProperty.ts(14,22): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.


==== tests/cases/compiler/collisionSuperAndLocalFunctionInProperty.ts (1 errors) ====
    function _super() { // No error
    } 
    class Foo {
       public prop1 = {
            doStuff: () => {
                function _super() { // No error
                } 
            }
       }
    }
    class b extends Foo {
        public prop2 = {
            doStuff: () => {
                function _super() { // error
                         ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
                } 
            }
        }
    }